; ModuleID = '/home/carl/AnghaBench/git/trace2/extr_tr2_tgt_event.c_fn_version_fl.c'
source_filename = "/home/carl/AnghaBench/git/trace2/extr_tr2_tgt_event.c_fn_version_fl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i32 }
%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [8 x i8] c"version\00", align 1
@JSON_WRITER_INIT = common dso_local global %struct.json_writer zeroinitializer, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"evt\00", align 1
@TR2_EVENT_VERSION = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"exe\00", align 1
@git_version_string = common dso_local global i32 0, align 4
@tr2dst_event = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @fn_version_fl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fn_version_fl(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.json_writer, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %7 = bitcast %struct.json_writer* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.json_writer* @JSON_WRITER_INIT to i8*), i64 4, i1 false)
  %8 = call i32 @jw_object_begin(%struct.json_writer* %6, i32 0)
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @event_fmt_prepare(i8* %9, i8* %10, i32 %11, i32* null, %struct.json_writer* %6)
  %13 = load i32, i32* @TR2_EVENT_VERSION, align 4
  %14 = call i32 @jw_object_string(%struct.json_writer* %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* @git_version_string, align 4
  %16 = call i32 @jw_object_string(%struct.json_writer* %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %15)
  %17 = call i32 @jw_end(%struct.json_writer* %6)
  %18 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %6, i32 0, i32 0
  %19 = call i32 @tr2_dst_write_line(%struct.TYPE_3__* @tr2dst_event, i32* %18)
  %20 = call i32 @jw_release(%struct.json_writer* %6)
  %21 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tr2dst_event, i32 0, i32 0), align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %2
  %24 = load i8*, i8** %3, align 8
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @fn_too_many_files_fl(i8* %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %2
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @jw_object_begin(%struct.json_writer*, i32) #2

declare dso_local i32 @event_fmt_prepare(i8*, i8*, i32, i32*, %struct.json_writer*) #2

declare dso_local i32 @jw_object_string(%struct.json_writer*, i8*, i32) #2

declare dso_local i32 @jw_end(%struct.json_writer*) #2

declare dso_local i32 @tr2_dst_write_line(%struct.TYPE_3__*, i32*) #2

declare dso_local i32 @jw_release(%struct.json_writer*) #2

declare dso_local i32 @fn_too_many_files_fl(i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
